--- a/turbo.json
+++ b/turbo.json
@@ -1,21 +1,35 @@
 {
-  "$schema": "https://turborepo.com/schema.json",
-  "ui": "tui",
+  "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": ["dist/**", "build/**"]
     },
-    "lint": {
-      "dependsOn": ["^lint"]
-    },
-    "check-types": {
-      "dependsOn": ["^check-types"]
+    "build-changelog": {
+      "cache": false,
+      "inputs": ["packages/*/CHANGELOG.md"],
+      "outputs": ["packages/changelog.json", "apps/docs/changelog.mdx"]
     },
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "storybook": {
+      "cache": false,
+      "persistent": true,
+      "dependsOn": ["build-changelog"]
+    },
+    "build-storybook": {
+      "dependsOn": ["build-changelog", "^build"],
+      "outputs": ["storybook-static/**"]
+    },
+    "lint": {},
+    "format": {},
+    "test": {
+      "dependsOn": ["^build"]
+    },
+    "test:run": {
+      "dependsOn": ["^build"]
     }
   }
 }
