--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -9,7 +9,8 @@
     "preview": "serve storybook-static"
   },
   "dependencies": {
-    "@uiid/tokens": "workspace:*"
+    "@uiid/tokens": "workspace:*",
+    "@uiid/ui": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
