--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -10,14 +10,6 @@
     "rootDir": "src",
     "allowImportingTsExtensions": false
   },
-  "include": [
-    "src/**/*",
-    "src/vite-env.d.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.*",
-    "**/*.spec.*"
-  ]
+  "include": ["src/**/*", "src/vite-env.d.ts"],
+  "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.spec.*"]
 }
