refactor: rename core to utils, move button tokens

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "exports": {
     ".": "./src/tokens.css",
+    "./buttons/*": "./src/buttons/button.css",
     "./colors/*": "./src/colors/*.css"
   },
   "files": [
