--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ignore-pattern 'dist/**'",
     "format": "prettier --write .",
     "test": "vitest",
     "test:run": "vitest run"
