--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,10 +22,10 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@uiid/icons": "workspace:*",
     "@uiid/primitives": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "cva": "^1.0.0-beta.4",
-    "lucide-react": "^0.539.0",
     "tailwind-merge": "^3.3.1"
   },
   "peerDependencies": {
