fix: primitives styles

--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@uiid/tokens": "workspace:*",
+    "@uiid/primitives": "workspace:*",
     "@uiid/ui": "workspace:*"
   },
   "devDependencies": {
