--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@storybook/react-vite": "^9.1.2",
     "@types/react": "^19.1.10",
+    "nodemon": "^3.1.10",
     "prettier": "3.6.2",
     "react": "^19.1.1",
     "storybook": "^9.1.2",
