feat: add switch, move forms stories

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,7 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.4",
     "@uiid/icons": "workspace:*",
     "@uiid/primitives": "workspace:*",
     "@uiid/tokens": "workspace:*",
