--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,7 +27,8 @@
     "@uiid/primitives": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "cva": "^1.0.0-beta.4",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2"
   },
   "peerDependencies": {
     "react": "^19.1.1",
