--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@uiid/primitives",
+  "name": "@uiid/utils",
   "version": "0.0.0",
   "type": "module",
-  "main": "dist/primitives.umd.cjs",
-  "module": "dist/primitives.js",
+  "main": "dist/utils.umd.cjs",
+  "module": "dist/utils.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/primitives.js",
-      "require": "./dist/primitives.umd.cjs"
-    },
-    "./globals.css": "./dist/primitives.css"
+      "import": "./dist/utils.js",
+      "require": "./dist/utils.umd.cjs"
+    }
   },
   "files": [
     "dist"
@@ -24,8 +23,8 @@
     "test:run": "vitest run"
   },
   "dependencies": {
-    "@uiid/tokens": "workspace:*",
-    "@uiid/utils": "workspace:*"
+    "cva": "^1.0.0-beta.4",
+    "tailwind-merge": "^3.3.1"
   },
   "peerDependencies": {
     "react": "^19.1.1",
@@ -33,7 +32,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
-    "@storybook/react-vite": "^9.0.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
@@ -46,9 +44,6 @@
     "globals": "^16.2.0",
     "happy-dom": "^15.11.6",
     "prettier": "3.6.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "storybook": "^9.0.15",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0",
