--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,7 @@
       "@ui/*": ["packages/ui/src/*"],
       "@icons/*": ["packages/icons/src/*"],
       "@primitives/*": ["packages/primitives/src/*"],
-      "@tokens/*": ["packages/tokens/src/*"],
-      "@utils": ["packages/utils/src"],
-      "@utils/*": ["packages/utils/src/*"]
+      "@tokens/*": ["packages/tokens/src/*"]
     }
   },
   "include": ["packages/*/src/**/*", "apps/*/src/**/*"],
