--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "@base-ui-components/react": "1.0.0-beta.4",
     "@uiid/icons": "workspace:*",
-    "@uiid/primitives": "workspace:*",
+    "@uiid/layout": "workspace:*",
+    "@uiid/typography": "workspace:*",
     "@uiid/tokens": "workspace:*",
+    "@uiid/utils": "workspace:*",
     "cva": "^1.0.0-beta.4",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
