--- a/packages/cards/package.json
+++ b/packages/cards/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@uiid/overlays",
+  "name": "@uiid/cards",
   "version": "0.0.0",
   "type": "module",
-  "main": "dist/overlays.umd.cjs",
-  "module": "dist/overlays.js",
+  "main": "dist/cards.umd.cjs",
+  "module": "dist/cards.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/overlays.js",
-      "require": "./dist/overlays.umd.cjs"
+      "import": "./dist/cards.js",
+      "require": "./dist/cards.umd.cjs"
     },
-    "./globals.css": "./dist/overlays.css"
+    "./globals.css": "./dist/cards.css"
   },
   "files": [
     "dist"
@@ -24,15 +24,12 @@
     "test:run": "vitest run"
   },
   "dependencies": {
-    "@base-ui-components/react": "1.0.0-beta.4",
     "@uiid/buttons": "workspace:*",
-    "@uiid/cards": "workspace:*",
     "@uiid/icons": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/typography": "workspace:*",
-    "@uiid/utils": "workspace:*",
-    "vaul": "^1.1.2"
+    "@uiid/utils": "workspace:*"
   },
   "peerDependencies": {
     "react": "^19.1.1",
@@ -46,6 +43,8 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@uiid/icons": "workspace:*",
+    "@uiid/layout": "workspace:*",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
