--- a/packages/indicators/package.json
+++ b/packages/indicators/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-beta.4",
+    "@uiid/cards": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/typography": "workspace:*",
     "@uiid/utils": "workspace:*"
