--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -23,6 +23,8 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.4",
+    "@uiid/cards": "workspace:*",
     "@uiid/icons": "workspace:*",
     "@uiid/buttons": "workspace:*",
     "@uiid/tokens": "workspace:*",
