feat: link component

--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -24,7 +24,9 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@uiid/icons": "workspace:*",
     "@uiid/tokens": "workspace:*",
+    "@uiid/typography": "workspace:*",
     "@uiid/utils": "workspace:*"
   },
   "peerDependencies": {
