--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
@@ -20,30 +19,21 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
-
-    /* Path mapping for future packages */
-    "baseUrl": ".",
-    "paths": {
-      "@icons/*": ["packages/icons/src/*"],
-      "@layout/*": ["packages/layout/src/*"],
-      "@tokens/*": ["packages/tokens/src/*"],
-      "@typography/*": ["packages/typography/src/*"],
-      "@utils/*": ["packages/utils/src/*"],
-      "@ui/*": ["packages/ui/src/*"]
-    }
+    "noUncheckedSideEffectImports": true
   },
-  "include": [
-    "packages/*/src/**/*",
-    "apps/*/src/**/*",
-    "packages/buttons/vite.config.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    "**/*.stories.*",
-    "**/*.test.*",
-    "**/*.spec.*"
+  "files": [],
+  "references": [
+    { "path": "./packages/buttons" },
+    { "path": "./packages/calendars" },
+    { "path": "./packages/cards" },
+    { "path": "./packages/forms" },
+    { "path": "./packages/icons" },
+    { "path": "./packages/indicators" },
+    { "path": "./packages/interactive" },
+    { "path": "./packages/layout" },
+    { "path": "./packages/overlays" },
+    { "path": "./packages/tokens" },
+    { "path": "./packages/typography" },
+    { "path": "./packages/utils" }
   ]
 }
