--- a/packages/interactive/package.json
+++ b/packages/interactive/package.json
@@ -2,14 +2,13 @@
   "name": "@uiid/interactive",
   "version": "0.0.0",
   "type": "module",
-  "main": "dist/interactive.umd.cjs",
-  "module": "dist/interactive.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/interactive.js",
-      "require": "./dist/interactive.umd.cjs"
+      "import": "./dist/index.js"
     },
     "./globals.css": "./dist/interactive.css"
   },
