--- a/apps/next-16/package.json
+++ b/apps/next-16/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-16",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,6 +13,7 @@
     "react-dom": "19.2.0",
     "next": "16.0.1",
     "@uiid/buttons": "workspace:*",
+    "@uiid/cards": "workspace:*",
     "@uiid/icons": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/tokens": "workspace:*",
