--- a/packages/interactive/package.json
+++ b/packages/interactive/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@base-ui-components/react": "1.0.0-beta.4",
     "@uiid/forms": "workspace:*",
+    "@uiid/icons": "workspace:*",
+    "@uiid/layout": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/utils": "workspace:*",
     "embla-carousel-react": "^8.6.0"
@@ -41,8 +43,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@uiid/icons": "workspace:*",
-    "@uiid/layout": "workspace:*",
+    "@uiid/buttons": "workspace:*",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
