refactor: more sidebar, list tinkering

--- a/packages/navigation/package.json
+++ b/packages/navigation/package.json
@@ -30,6 +30,7 @@
     "@uiid/layout": "workspace:*",
     "@uiid/overlays": "workspace:*",
     "@uiid/tokens": "workspace:*",
+    "@uiid/typography": "workspace:*",
     "@uiid/utils": "workspace:*"
   },
   "peerDependencies": {
