--- a/packages/tables/package.json
+++ b/packages/tables/package.json
@@ -26,7 +26,7 @@
     "@base-ui-components/react": "1.0.0-beta.4",
     "@uiid/icons": "workspace:*",
     "@uiid/buttons": "workspace:*",
-    "@uiid/forms": "workspace:*",
+    "@uiid/interactive": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/overlays": "workspace:*",
     "@uiid/tokens": "workspace:*",
@@ -45,6 +45,8 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@uiid/cards": "workspace:*",
+    "@uiid/forms": "workspace:*",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
