feat: overlays in next sandbox

--- a/apps/next-16/package.json
+++ b/apps/next-16/package.json
@@ -17,6 +17,7 @@
     "@uiid/icons": "workspace:*",
     "@uiid/forms": "workspace:*",
     "@uiid/layout": "workspace:*",
+    "@uiid/overlays": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/typography": "workspace:*"
   },
