--- a/packages/calendars/package.json
+++ b/packages/calendars/package.json
@@ -30,6 +30,7 @@
     "@uiid/icons": "workspace:*",
     "@uiid/interactive": "workspace:*",
     "@uiid/layout": "workspace:*",
+    "@uiid/overlays": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/typography": "workspace:*",
     "@uiid/utils": "workspace:*",
