refactor: simplify, clean up month view

--- a/packages/calendars/package.json
+++ b/packages/calendars/package.json
@@ -28,6 +28,7 @@
     "@uiid/buttons": "workspace:*",
     "@uiid/cards": "workspace:*",
     "@uiid/icons": "workspace:*",
+    "@uiid/indicators": "workspace:*",
     "@uiid/interactive": "workspace:*",
     "@uiid/layout": "workspace:*",
     "@uiid/overlays": "workspace:*",
