--- a/packages/tables/package.json
+++ b/packages/tables/package.json
@@ -19,8 +19,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ignore-pattern 'dist/**'",
     "format": "prettier --write .",
-    "test": "vitest",
-    "test:run": "vitest run"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-beta.4",
