--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -8,8 +8,9 @@
     "noEmit": false,
     "composite": true,
     "rootDir": "src",
-    "allowImportingTsExtensions": false
+    "allowImportingTsExtensions": false,
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
-  "include": ["src/**/*", "src/vite-env.d.ts"],
+  "include": ["src/**/*", "src/vite-env.d.ts", "vitest.setup.ts"],
   "exclude": ["dist", "node_modules"]
 }
