--- a/packages/calendars/tsconfig.json
+++ b/packages/calendars/tsconfig.json
@@ -11,6 +11,6 @@
     "allowImportingTsExtensions": false,
     "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
-  "include": ["src/**/*", "vitest.setup.ts"],
+  "include": ["src/**/*"],
   "exclude": ["dist", "node_modules"]
 }
