--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@uiid/buttons": "workspace:*",
-    "@uiid/cards": "workspace:*",
     "@uiid/calendars": "workspace:*",
+    "@uiid/cards": "workspace:*",
     "@uiid/forms": "workspace:*",
     "@uiid/indicators": "workspace:*",
     "@uiid/interactive": "workspace:*",
@@ -23,22 +23,27 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@storybook/addon-a11y": "^9.1.2",
-    "@storybook/addon-docs": "^9.1.2",
-    "@storybook/react-vite": "^9.1.2",
+    "@storybook/addon-a11y": "^10.1.10",
+    "@storybook/addon-docs": "^10.1.10",
+    "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/react-vite": "^10.1.10",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^9.1.2",
+    "eslint-plugin-storybook": "^10.1.10",
     "globals": "^16.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "serve": "^14.2.4",
-    "storybook": "^9.1.2",
+    "storybook": "^10.1.10",
     "storybook-addon-test-codegen": "^2.0.1",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1"
+    "typescript-eslint": "^8.39.1",
+    "vitest": "^4.0.16",
+    "playwright": "^1.57.0",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16"
   }
 }
