--- a/packages/interactive/package.json
+++ b/packages/interactive/package.json
@@ -24,12 +24,28 @@
   },
   "dependencies": {
     "@base-ui/react": "1.0.0",
+    "@tiptap/extension-code-block-lowlight": "^3.14.0",
+    "@tiptap/extension-color": "^3.14.0",
+    "@tiptap/extension-horizontal-rule": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/extension-typography": "^3.14.0",
+    "@tiptap/extensions": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
+    "@uiid/cards": "workspace:*",
     "@uiid/forms": "workspace:*",
     "@uiid/icons": "workspace:*",
+    "@uiid/indicators": "workspace:*",
     "@uiid/layout": "workspace:*",
+    "@uiid/overlays": "workspace:*",
     "@uiid/tokens": "workspace:*",
+    "@uiid/typography": "workspace:*",
     "@uiid/utils": "workspace:*",
-    "embla-carousel-react": "^8.6.0"
+    "embla-carousel-react": "^8.6.0",
+    "lowlight": "^3.3.0",
+    "react-medium-image-zoom": "^5.4.0"
   },
   "peerDependencies": {
     "react": "^19.1.1",
