refactor: lots of cleanup

--- a/packages/interactive/package.json
+++ b/packages/interactive/package.json
@@ -34,6 +34,7 @@
     "@tiptap/pm": "^3.14.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
+    "@uiid/buttons": "workspace:*",
     "@uiid/cards": "workspace:*",
     "@uiid/forms": "workspace:*",
     "@uiid/icons": "workspace:*",
