--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -29,20 +29,21 @@
     "@storybook/react-vite": "^10.1.10",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "^10.1.10",
     "globals": "^16.3.0",
+    "playwright": "^1.57.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "serve": "^14.2.4",
     "storybook": "^10.1.10",
+    "storybook-addon-tag-badges": "^3.0.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vitest": "^4.0.16",
-    "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.16",
-    "@vitest/coverage-v8": "^4.0.16"
+    "vitest": "^4.0.16"
   }
 }
