--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -25,12 +25,13 @@
   },
   "dependencies": {
     "@base-ui/react": "1.0.0",
+    "@number-flow/react": "^0.5.10",
+    "@uiid/buttons": "workspace:*",
     "@uiid/cards": "workspace:*",
     "@uiid/icons": "workspace:*",
-    "@uiid/buttons": "workspace:*",
+    "@uiid/layout": "workspace:*",
     "@uiid/tokens": "workspace:*",
     "@uiid/typography": "workspace:*",
-    "@uiid/layout": "workspace:*",
     "@uiid/utils": "workspace:*"
   },
   "peerDependencies": {
